--- a/Model_Training.ipynb
+++ b/Model_Training.ipynb
@@ -258,7 +258,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# serialize model to JSON\n",
+    "model_json = model.to_json()\n",
+    "with open(\"model.json\", \"w\") as json_file:\n",
+    "    json_file.write(model_json)\n",
+    "# serialize weights to HDF5\n",
+    "model.save_weights(\"model.h5\")\n",
+    "print(\"Saved model to disk\")"
+   ]
   },
   {
    "cell_type": "code",
